--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,11 @@ h1 {
     transform: rotateX(180deg);
 }
 
+#card-container.is-updating {
+    /* Masque complètement l'élément et le retire du flux de la page */
+    display: none !important; 
+}
+
 .card-face {
     position: absolute;
     width: 100%;
