--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,8 @@ h1 {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.6s;
     transform-style: preserve-3d;
+    transition: transform 0.6s, opacity 0.2s;
 }
 
 #card-container.is-flipped .card-inner { 
